1. fixed responsiveness of text field, send icon and attachment icon in chatbox 2. fixed width of Accept and Remove buttons on Recently Joined page on smaller screens

--- a/public/user_assets/css/chat.css
+++ b/public/user_assets/css/chat.css
@@ -55,12 +55,12 @@
 }
 .chat-section ul li{
   list-style: none;
-  margin-top:10px;
+  margin: 7px;
   position: relative;
 }
 .chat-section{
   overflow-y:scroll;
-  height:300px;
+  height: 255px;
 }
 .chat-section ul{
   padding: 0px;
@@ -147,15 +147,26 @@
 .left-chat,.right-chat{
   overflow: hidden;
 }
-.left-chat p,.right-chat p{
+.left-chat p,.right-chat p {
   background-color:#7553A4;
-  padding: 10px;
+  padding: 5px 10px;
   color:#fff;
-  border-radius: 5px; 
+  border-radius: 20px; 
   float:left;
   width:60%;
-  /* margin-bottom:20px; */
+  word-break: break-word;
+  font-size: .95em;
+  margin: 0;
 }
+
+.left-chat p {
+  border-bottom-left-radius: 0;  
+}
+
+.right-chat p {
+  border-bottom-right-radius: 0;  
+}
+
 .left-chat span,.right-chat span{
   position: absolute;
   left:70px;
@@ -167,13 +178,12 @@
 }
 .right-chat p{
   float:right;
-  background-color: #FFFFFF;
-  color:#7553A4;
+  background-color: #ed6c05;
 }
 .third-section{
   border-left: 2px solid #ccc;
   border-right: 2px solid #ccc;
-  background-color:#f3f3f3;
+  background-color:#fff;
   margin-top:-1px;
 }
 
@@ -190,7 +200,7 @@
   border-radius: 50%;
   text-align: center;
 }
-.left-chat:before{
+/* .left-chat::before{
   content: " ";
   position:absolute;
   top:0px;
@@ -198,8 +208,8 @@
   bottom:150px;
   border:15px solid transparent;
   border-top-color:#7553A4; 
-}
-.right-chat:before{
+} */
+/* .right-chat::before{
   content: " ";
   position:absolute;
   top:0px;
@@ -207,7 +217,7 @@
   bottom:150px;
   border:15px solid transparent;
   border-top-color:#fff; 
-}
+} */
 
 /* chat box changes */
 
@@ -288,7 +298,7 @@
 .arrow_button {
   /* border:2px solid green; */
   border:none;
-  background-color:#f3f3f3;
+  background-color:#fff;
   border-radius: 99px;
   padding:0;
   position: absolute;
@@ -353,9 +363,9 @@
     top: 7px;
   }
 
-  .text-bar input {
+  /* .text-bar input {
     width: 310px !important;
-  }
+  } */
 
   .emojiPicker {
     width: 100% !important;
